--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,14 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
         <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
         <title>Kế toán</title>
+        <link
+            rel="stylesheet"
+            href="https://cdn3.devexpress.com/jslib/22.2.5/css/dx.common.css"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdn3.devexpress.com/jslib/22.2.5/css/dx.light.css"
+        />
     </head>
     <body>
         <noscript>
