--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
             rel="stylesheet"
             href="https://cdn3.devexpress.com/jslib/22.2.5/css/dx.light.css"
         />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        />
     </head>
     <body>
         <noscript>
